# boxx

./: AGENTS.md  Cargo.toml  flake.nix
.agents/skills/commit/: SKILL.md
src/: dns.rs  main.rs  netns.rs  proxy.rs  whitelist.rs
tests/: integration.rs
