[package]
name = "boxx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = [
    "std",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "socket-raw",
]
